--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-2": "^6.3.13",
     "babel-register": "^6.3.13",
+    "babelify": "^7.2.0",
+    "browserify": "^12.0.1",
+    "handlebars": "^4.0.5",
+    "literalify": "^0.4.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3"
   },
